--- a/index.html
+++ b/index.html
@@ -229,11 +229,11 @@
             </div>
             <div class="product-detail-card">
                 <div class="product-detail-img">
-                    <img src="https://images-eu.ssl-images-amazon.com/images/I/61aUBxqc5PL._AC_UL320_SR320,320_.jpg" alt="">
+                    <img src="https://m.media-amazon.com/images/I/61NGnpjoRDL._AC_SX425_.jpg">
                 </div>
-                <a class="product-detail-link" href="./product3.html">Apple 2020 MacBook Air Laptop M1 Chip, 13" Retina Display, 8GB RAM, 256GB SSD Storage, Backlit Keyboard, FaceTime HD Camera, Touch ID.</a>
+                <a class="product-detail-link" href="./product3.html">Apple iPad (9th Generation): with A13 Bionic chip, 10.2-inch Retina Display, 64GB, Wi-Fi, 12MP front/8MP Back Camera, Touch ID, All-Day Battery Life – Space Gray</a>
                 <p>
-                    <strong class="product-price">₹ 59,218.00</strong>
+                    <strong class="product-price">₹ 34,999.00</strong>
                 </p>
                 <p class="product-deliver-by">Get it by <strong>Wednesday, August 24</strong> 
                     FREE Delivery over ₹499. Fulfilled by Amazon.
@@ -241,11 +241,11 @@
             </div>
             <div class="product-detail-card">
                 <div class="product-detail-img">
-                    <img src="https://images-eu.ssl-images-amazon.com/images/I/71hmqIQJFdL._AC_UL320_SR320,320_.jpg" alt="">
+                    <img src="https://m.media-amazon.com/images/I/81CaU+f30fL._AC_SX679_.jpg" alt="">
                 </div>
-                <a class="product-detail-link" href="./product1.html">2021 Apple MacBook Pro (16-inch//41.05 cm, Apple M1 Max chip with 10‑core CPU and 32‑core GPU, 32GB RAM, 1TB SSD) - Space Grey</a>
+                <a class="product-detail-link" href="./product4.html">ASUS 2022 Newest TUF Gaming Laptop, 15.6 inch FHD Display, Intel Core i7-12650H 10 Core, NVIDIA GeForce RTX 3070, 16GB DDR5 RAM, 1TB SSD</a>
                 <p>
-                    <strong class="product-price">₹ 3,99,999.00</strong>
+                    <strong class="product-price">₹ 1,25,698.63</strong>
                 </p>
                 <p class="product-deliver-by">Get it by <strong>Monday, August 22</strong> 
                     FREE Delivery over ₹499. Fulfilled by Amazon.
@@ -253,11 +253,11 @@
             </div>
             <div class="product-detail-card">
                 <div class="product-detail-img">
-                    <img src="https://images-eu.ssl-images-amazon.com/images/I/71eknZxZLmL._AC_UL320_SR320,320_.jpg" alt="">
+                    <img src=https://m.media-amazon.com/images/I/51-el2fyB+L._AC_SX300_SY300_.jpg alt="">
                 </div>
-                <a class="product-detail-link" href="./product1.html">2021 Apple MacBook Pro (16-inch//41.05 cm, Apple M1 Max chip with 10‑core CPU and 32‑core GPU, 32GB RAM, 1TB SSD) - Space Grey</a>
+                <a class="product-detail-link" href="./product5.html">Lenovo Flex 5 Laptop, 14.0" FHD Touch Display, AMD Ryzen 5 5500U, 16GB RAM, 512GB Storage, AMD Radeon Graphics, Windows 11 Home, Storm Grey</a>
                 <p>
-                    <strong class="product-price">₹ 3,99,999.00</strong>
+                    <strong class="product-price">₹ 2,69,999.00</strong>
                 </p>
                 <p class="product-deliver-by">Get it by <strong>Monday, August 22</strong> 
                     FREE Delivery over ₹499. Fulfilled by Amazon.
@@ -265,11 +265,11 @@
             </div>
             <div class="product-detail-card">
                 <div class="product-detail-img">
-                    <img src="https://images-eu.ssl-images-amazon.com/images/I/91k86Cdp1uL._AC_UL320_SR320,320_.jpg" alt="">
+                    <img src="https://m.media-amazon.com/images/I/617sGSjmC1L.__AC_SX300_SY300_QL70_FMwebp_.jpg ">
                 </div>
-                <a class="product-detail-link" href="./product1.html">2021 Apple MacBook Pro (16-inch//41.05 cm, Apple M1 Max chip with 10‑core CPU and 32‑core GPU, 32GB RAM, 1TB SSD) - Space Grey</a>
+                <a class="product-detail-link" href="./product6.html">GoPro HERO11 Black - Waterproof Action Camera with 5.3K60 Ultra HD Video, 27MP Photos, 1/1.9" Image Sensor, Live Streaming, Webcam, Stabilization</a>
                 <p>
-                    <strong class="product-price">₹ 3,99,999.00</strong>
+                    <strong class="product-price">₹ 42,999.00</strong>
                 </p>
                 <p class="product-deliver-by">Get it by <strong>Monday, August 22</strong> 
                     FREE Delivery over ₹499. Fulfilled by Amazon.
