--- a/product4.html
+++ b/product4.html
@@ -7,7 +7,7 @@
     <title>Amazon Product | Jatin Mittal</title>
     <link rel="shortcut icon" href="https://thumbs.dreamstime.com/b/amazon-logo-white-background-montreal-canada-july-printed-paper-98221126.jpg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="product3.css">
+    <link rel="stylesheet" href="product4.css">
 </head>
 <body>
     <!-- NAVBAR -->
@@ -59,7 +59,7 @@
     <!-- SECTION -1 -->
     <section class="product-heading">
         <section class="product-head-container">
-            <h1>iPad</h1>
+            <h1>Laptops</h1>
         </section>
     </section>
 
@@ -67,18 +67,18 @@
     <section class="product-detail">
         <div class="product-container">
             <div class="product-picture">
-                <img src="https://m.media-amazon.com/images/I/61NGnpjoRDL._AC_SX425_.jpg" alt="">
+                <img src="https://m.media-amazon.com/images/I/81CaU+f30fL._AC_SX679_.jpg" alt="">
             </div>
             <div class="product-detail-body">
-                <h1 class="product-title">Apple iPad (9th Generation): with A13 Bionic chip, 10.2-inch Retina Display, 64GB, Wi-Fi, 12MP front/8MP Back Camera, Touch ID, All-Day Battery Life – Space Gray</h1>
-                <h3 class="product-price">₹ 34,999.00</h3>
+                <h1 class="product-title">ASUS 2022 Newest TUF Gaming Laptop, 15.6 inch FHD Display, Intel Core i7-12650H 10 Core, NVIDIA GeForce RTX 3070, 16GB DDR5 RAM, 1TB SSD</h1>
+                <h3 class="product-price">₹ 1,25,698.63</h3>
                 <div class="product-about">
                     <h4>About the item</h4>
                     <ul>
-                        <li>WHY IPAD — All the essentials in the most affordable iPad, with a beautiful 10.2-inch Retina display, powerful A13 Bionic chip, and an Ultra Wide front camera with Center Stage. Work, play, create, learn, stay connected, and more.</li>
-                        <li>IPADOS + APPS — iPadOS makes iPad more productive, intuitive, and versatile. With iPadOS, run multiple apps at once, use Apple Pencil to write in any text field with Scribble, and edit and share photos. iPad comes with essential apps like Safari, Messages, and Keynote, with over a million more apps available on the App Store.</li>
-                        <li>FAST WI-FI CONNECTIVITY — Fast Wi-Fi keeps you connected at home, work, school, or wherever you go with your iPad.</li>
-                        <li>APPLE PENCIL AND SMART KEYBOARD — Apple Pencil (1st generation) transforms iPad into an immersive drawing canvas and the world’s best note‑taking device. The Smart Keyboard features a comfortable typing experience and folds into a slim, lightweight cover for protection.</li>
+                        <li>【Processor】12th Gen Intel Core i7-12650H Processor 2.3 GHz (24M Cache, up to 4.7 GHz, 10 cores: 6 P-cores and 4 E-cores). Power your games with the latest Alder Lake Intel Corei7-12650H CPU. 10 cores and 16 threads are ready to handle the latest AAA games.</li>
+                        <li>【NVIDIA RTX 3070 8GB GDDR6 Graphics】 The GeForce RTX 3070 graphics cards are powered by Ampere—NVIDIA’s 2nd gen RTX architecture. Built with dedicated 2nd gen RT Cores and 3rd gen Tensor Cores, streaming multiprocessors, and high-speed memory, they give you the power you need to rip through the most demanding games.</li>
+                        <li>【Operating System】Windows 11 Home has all the power and security of Windows 10 with a redesigned and refreshed look. It also comes with new tools, sounds, and apps. Every detail has been considered. All of it comes together to bring you a refreshing experience on your PC</li>
+                        <li>【15.6" FHD 144Hz Display】15.6-inch, FHD (1920 x 1080) 16:9, anti-glare display, sRGB:62.5%, Adobe:47.34%, Refresh Rate:144Hz, IPS-level, Adaptive-Sync.</li>
                     </ul>
 
                 </div>
