--- a/product5.html
+++ b/product5.html
@@ -7,7 +7,7 @@
     <title>Amazon Product | Jatin Mittal</title>
     <link rel="shortcut icon" href="https://thumbs.dreamstime.com/b/amazon-logo-white-background-montreal-canada-july-printed-paper-98221126.jpg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="product3.css">
+    <link rel="stylesheet" href="product5.css">
 </head>
 <body>
     <!-- NAVBAR -->
@@ -59,7 +59,7 @@
     <!-- SECTION -1 -->
     <section class="product-heading">
         <section class="product-head-container">
-            <h1>iPad</h1>
+            <h1>Laptops</h1>
         </section>
     </section>
 
@@ -67,18 +67,19 @@
     <section class="product-detail">
         <div class="product-container">
             <div class="product-picture">
-                <img src="https://m.media-amazon.com/images/I/61NGnpjoRDL._AC_SX425_.jpg" alt="">
+                <img src="https://m.media-amazon.com/images/I/51-el2fyB+L._AC_SX300_SY300_.jpg " alt="">
             </div>
             <div class="product-detail-body">
-                <h1 class="product-title">Apple iPad (9th Generation): with A13 Bionic chip, 10.2-inch Retina Display, 64GB, Wi-Fi, 12MP front/8MP Back Camera, Touch ID, All-Day Battery Life – Space Gray</h1>
-                <h3 class="product-price">₹ 34,999.00</h3>
+                <h1 class="product-title">Lenovo Flex 5 Laptop, 14.0" FHD Touch Display, AMD Ryzen 5 5500U, 16GB RAM, 512GB Storage, AMD Radeon Graphics, Windows 11 Home, Storm Grey</h1>
+                <h3 class="product-price">₹ 2,69,999.00</h3>
                 <div class="product-about">
                     <h4>About the item</h4>
                     <ul>
-                        <li>WHY IPAD — All the essentials in the most affordable iPad, with a beautiful 10.2-inch Retina display, powerful A13 Bionic chip, and an Ultra Wide front camera with Center Stage. Work, play, create, learn, stay connected, and more.</li>
-                        <li>IPADOS + APPS — iPadOS makes iPad more productive, intuitive, and versatile. With iPadOS, run multiple apps at once, use Apple Pencil to write in any text field with Scribble, and edit and share photos. iPad comes with essential apps like Safari, Messages, and Keynote, with over a million more apps available on the App Store.</li>
-                        <li>FAST WI-FI CONNECTIVITY — Fast Wi-Fi keeps you connected at home, work, school, or wherever you go with your iPad.</li>
-                        <li>APPLE PENCIL AND SMART KEYBOARD — Apple Pencil (1st generation) transforms iPad into an immersive drawing canvas and the world’s best note‑taking device. The Smart Keyboard features a comfortable typing experience and folds into a slim, lightweight cover for protection.</li>
+                        <li>With the latest AMD Ryzen 5 U series processors and 16GB DDR4 RAM, enjoy excellent performance.Voltage:5.0 volts</li>
+                        <li>Create, play, stream, and work in any position, surface or incline with a 360° hinge that lets you watch shows, present and share in tent and stand modes and browse while in tablet mode</li>
+                        <li>Expand your field of view with a taller 16:10 aspect ratio on the 14" WUXGA touchscreen and four-sided thin bezels</li>
+                        <li>Expand your field of view with a taller 16:10 aspect ratio on the 14" WUXGA touchscreen and four-sided thin bezels</li>
+                        <li>Store more data faster with 512GB SSD storage and keep your PC cool and quiet even under heavy loads with Intelligent Cooling</li>
                     </ul>
 
                 </div>
