--- a/product6.html
+++ b/product6.html
@@ -7,7 +7,7 @@
     <title>Amazon Product | Jatin Mittal</title>
     <link rel="shortcut icon" href="https://thumbs.dreamstime.com/b/amazon-logo-white-background-montreal-canada-july-printed-paper-98221126.jpg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="product3.css">
+    <link rel="stylesheet" href="product6.css">
 </head>
 <body>
     <!-- NAVBAR -->
@@ -59,7 +59,7 @@
     <!-- SECTION -1 -->
     <section class="product-heading">
         <section class="product-head-container">
-            <h1>iPad</h1>
+            <h1>Video Camera's</h1>
         </section>
     </section>
 
@@ -67,18 +67,18 @@
     <section class="product-detail">
         <div class="product-container">
             <div class="product-picture">
-                <img src="https://m.media-amazon.com/images/I/61NGnpjoRDL._AC_SX425_.jpg" alt="">
+                <img src="https://m.media-amazon.com/images/I/617sGSjmC1L.__AC_SX300_SY300_QL70_FMwebp_.jpg " alt="">
             </div>
             <div class="product-detail-body">
-                <h1 class="product-title">Apple iPad (9th Generation): with A13 Bionic chip, 10.2-inch Retina Display, 64GB, Wi-Fi, 12MP front/8MP Back Camera, Touch ID, All-Day Battery Life – Space Gray</h1>
-                <h3 class="product-price">₹ 34,999.00</h3>
+                <h1 class="product-title">GoPro HERO11 Black - Waterproof Action Camera with 5.3K60 Ultra HD Video, 27MP Photos, 1/1.9" Image Sensor, Live Streaming, Webcam, Stabilization</h1>
+                <h3 class="product-price">₹ 42,999.00</h3>
                 <div class="product-about">
                     <h4>About the item</h4>
                     <ul>
-                        <li>WHY IPAD — All the essentials in the most affordable iPad, with a beautiful 10.2-inch Retina display, powerful A13 Bionic chip, and an Ultra Wide front camera with Center Stage. Work, play, create, learn, stay connected, and more.</li>
-                        <li>IPADOS + APPS — iPadOS makes iPad more productive, intuitive, and versatile. With iPadOS, run multiple apps at once, use Apple Pencil to write in any text field with Scribble, and edit and share photos. iPad comes with essential apps like Safari, Messages, and Keynote, with over a million more apps available on the App Store.</li>
-                        <li>FAST WI-FI CONNECTIVITY — Fast Wi-Fi keeps you connected at home, work, school, or wherever you go with your iPad.</li>
-                        <li>APPLE PENCIL AND SMART KEYBOARD — Apple Pencil (1st generation) transforms iPad into an immersive drawing canvas and the world’s best note‑taking device. The Smart Keyboard features a comfortable typing experience and folds into a slim, lightweight cover for protection.</li>
+                        <li>Revolutionary New Image Sensor: expansive field of view ever on a HERO camera out of the box. This gives you an extra-large canvas for your creativity by capturing more of the sky and horizon in every shot. Zoom in, crop your shots, change digital lenses, adjust aspect ratios and more while keeping the rich textures and sharpness of your footage.</li>
+                        <li>Unbelievable Image Quality: With 5.3K video that gives you 91% more resolution than 4K and an incredible 665% more than 1080p, HERO11 Black captures the action with crisp detail and cinematic image quality. A water- repelling lens cover even helps eliminate lens flare and other artifacts to make your photos and videos even more stunning.</li>
+                        <li>High-Res Photos + Videos, High Frame Rate: HERO11 Black’s new image sensor boosts photo resolution up to an incredible 27MP while delivering 5.3K60 video with amazingly fluid motion that you can use to grab stunning 24.7MP stills of your favorite shots. Plus, record 2.7K240 video that can be played back in 8x slo-mo to catch details that can’t be seen at normal speed.</li>
+                        <li>High-Res Photos + Videos, High Frame Rate: HERO11 Black’s new image sensor boosts photo resolution up to an incredible 27MP while delivering 5.3K60 video with amazingly fluid motion that you can use to grab stunning 24.7MP stills of your favorite shots. Plus, record 2.7K240 video that can be played back in 8x slo-mo to catch details that can’t be seen at normal speed.</li>
                     </ul>
 
                 </div>
